[SPRINT REVIEW] BUGS E MELHORIAS DA SPRINT 1

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -7,9 +7,7 @@
 }
 
 html,body {
-  background: #2a2a2af0;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to top, #2a2a2af0, #0e0e0e);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to top, #0f0a1cf0, #00002e); 
+  background: #00002e;  /* fallback for old browsers */
   overflow-x: hidden;
   
 }
