[WEB-010] Rota e tela de buscar eventos por host publico

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -134,7 +134,12 @@ th{
 }
 #title-layout {
   font-family: "Rowdies", sans-serif;
-  font-size: 20px;
+  font-size: 18px;
+}
+
+#title-2{
+  font-family: "Rowdies", sans-serif;
+  font-size: 24px;
 }
 
 .text-shadow {
