--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -196,3 +196,7 @@ tr:nth-child(2n){
   background: -webkit-linear-gradient(to bottom, #616161, #dfceff);
   background: linear-gradient(to bottom, #685d6e, #4f4f4f);
 }
+
+.bg-roxo-light{
+  background-color: #d6d5ff;
+}
