melhorias visuais, visual light

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -7,9 +7,8 @@
 }
 
 html,body {
-  background: #00002e;  /* fallback for old browsers */
+  background: #d6d5ff;  /* fallback for old browsers */
   overflow-x: hidden;
-  
 }
 
 .bg-grad-1 {
