--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -7,7 +7,7 @@
 }
 
 html,body {
-  background: #d6d5ff;  /* fallback for old browsers */
+  background: #f1f1ff;  /* fallback for old browsers */
   overflow-x: hidden;
 }
 
