--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -17,10 +17,16 @@ html,body {
     background: linear-gradient(to top, #4A00E0, #670bb8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     
 }
+.bg-grey-dark  {
+    background: #282828;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #4A00E0, #670bb8);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #4c1973, #191d44); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+}
 .bg-grad-2 {
     background: #8E2DE2;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to left, #682edc, #8E2DE2);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #682edc, #8E2DE2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to left, #3c3a40, #8E2DE2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     
 }
 .bg-glass-2 {
