--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -18,6 +18,10 @@ html,body {
     
 }
 
+.q-input {
+  transition: all 0.5s linear;
+}
+
 .border-left-roxo{
     border-left: 5px solid #4A00E0;
 }
