melhorias de layout

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -185,12 +185,12 @@ tr:nth-child(2n){
 .bg-twitch{
   background: #6441a5;
   background: -webkit-linear-gradient(to top, #2a0845, #6441a5);
-  background: linear-gradient(to top, #2a0845, #6441a5);
+  background: linear-gradient(to top, #38126d, #45179a);
 }
 .bg-twitch-rev{
   background: #6441a5;
   background: -webkit-linear-gradient(to bottom, #3e0c66, #290f58);
-  background: linear-gradient(to bottom, #3e0c66, #290f58);
+  background: linear-gradient(to bottom, #441977, #361377);
 }
 
 .vw100{
